Added company phone to the landing page slides as well a button in the header that shows up on mobile

--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
 						<p class="bold">Dokument</p>
 					</div>
 				</li>
+				<br>
+				<br>
+				<li>
+					<a href="tel:0101654000">
+						<p class="bold">Telefon: 010-165 40 00</p>
+					</a>
+				</li>
 			</ul>
 
 		</div>
@@ -179,6 +186,12 @@
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
 						<p class="hero" style="font-weight: 400;">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="#entreprenad" class="common-Button white text-blue fromCenter">ENTREPRENAD</a><a href="#brf" class="common-Button white text-blue fromCenter" id="landingButton2">BRF / PRIVAT</a>
+						<br>
+						<br>
+						<a href="tel:0101654000" id="mobilePhoneNumber">
+							<p style="margin-bottom: 0;opacity: 1;">Växeln öppen mellan 08:30 - 17:00</p>
+							<p class="bold" style="opacity: 1;">Ring 010-165 40 00</p>
+						</a>
 					</div>
 
 				</div>
@@ -197,39 +210,43 @@
 							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h2 class="small">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
-								<ul>
-									<li>
-										<p class="small">Det ger er:</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p class="small">Sänkta kostnader i produktion och eftermarknad.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p class="small">Lättillgänglig dokumentation i vår portal.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p class="small">Tillgång till byggfelsstatistik.</p>
-									</li>
-								</ul>
 								<a class="popupTrigger" data-popup-id="ispect-details">
+									<ul>
+										<li>
+											<p class="small">Det ger er:</p>
+										</li>
+										<li>
+											<div class="checkmark"></div>
+											<p class="small">Sänkta kostnader i produktion och eftermarknad.</p>
+										</li>
+										<li>
+											<div class="checkmark"></div>
+											<p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p>
+										</li>
+										<li>
+											<div class="checkmark"></div>
+											<p class="small">Lättillgänglig dokumentation i vår portal.</p>
+										</li>
+										<li>
+											<div class="checkmark"></div>
+											<p class="small">Tillgång till byggfelsstatistik.</p>
+										</li>
+									</ul>
 									<p class="margin-bottom-2 common-Link">
 										Mer om digitaliserad entreprenadbesiktning
 									</p>
 								</a>
 								<!-- typeform button -->
 								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
-									KONTAKTA MIG
+									kontakta
 								</a>
 								<!-- typeform JS -->
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
+								<br>
+								<br>
+								<a href="tel:0101654000">
+									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+								</a>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<!-- Projects: Slider Autoplay -->
@@ -325,12 +342,13 @@
 									<p class="common-Link">Läs mer om vårt erbjudande för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<ul class="items-32">
-									<li class="fix-4-12 toLeft fromLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-									</li>
-								</ul>
+								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+								<br>
+								<br>
+								<a href="tel:0101654000">
+									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" height="700" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
@@ -362,6 +380,11 @@
 								<br>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+								<br>
+								<br>
+								<a href="tel:0101654000">
+									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
@@ -391,12 +414,13 @@
 									<p class="common-Link">Läs mer om vårt erbjudande för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<ul class="items-32">
-									<li class="fix-4-12 toLeft fromLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
-										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-									</li>
-								</ul>
+								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+								<br>
+								<br>
+								<a href="tel:0101654000">
+									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
