--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -164,8 +164,8 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
-					<p>
-						<a href="tel:0101654000" class="bold text-white opacity-10">Telefon: 010-165 40 00</a>
+					<p class="bold text-white opacity-10">
+						<a href="tel:0101654000">Telefon: 010-165 40 00</a>
 					</p>
 					<div class="fix-5-12" id="contactModal">
 						<div class="pad shadow selected">
