Starting the process of testing new copy on the landing page

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="#tjanster">Tjänster</a></li>
 					<li><a href="karriar/">Karriär</a></li>
-					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -125,15 +125,15 @@
 			<ul class="mainMenu text-blue">
 				<span class="bold small text-blueGrey">Navigation</span>
 				<li>
-					<a href="#erbjudande">
-						<p>Vårt erbjudande</p>
+					<a href="#tjanster">
+						<p>Tjänster</p>
 					</a>
 				</li>
 				<br>
 				<br>
 				<li>
 					<a href="kontakt/">
-						<p>Kundkontakt</p>
+						<p>Kontakta oss</p>
 					</a>
 				</li>
 				<br>
@@ -303,12 +303,12 @@
 
 
 	<!-- OUR SERVICES -->
-	<section class="slide fade autoHeight" id="erbjudande" name="erbjudande">
+	<section class="slide fade autoHeight" id="tjanster" name="tjanster">
 		<div class="content">
 			<div class="container" style="height: 360px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h2>Vårt erbjudande</h2>
+						<h2>Vad söker du?</h2>
 						<p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
 						<p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
 						<p class="menu inlineBlock margin-left-2 underline"><a href="#privat">Privat</a></p>
@@ -339,15 +339,21 @@
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
 								<a href="tjanster/entreprenad/">
-									<p class="common-Link">Läs mer om vårt erbjudande för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Våra tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+								<!-- typeform button -->
+								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+								<br>
+								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+									Lämna ett meddelande
+								</a>
+								<!-- typeform JS -->
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -375,15 +381,21 @@
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<a href="tjanster/brf/">
-									<p class="common-Link">Läs mer om vårt erbjudande för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
+								<!-- typeform button -->
+								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+								<br>
+								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+									Lämna ett meddelande
+								</a>
+								<!-- typeform JS -->
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -411,15 +423,21 @@
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<a href="tjanster/privat/">
-									<p class="common-Link">Läs mer om vårt erbjudande för privatpersoner<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
+								<!-- typeform button -->
+								<p class="micro margin-0">Frågor? Lämna ett meddelande så hjälper vi dig!</p>
+								<br>
+								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+									Lämna ett meddelande
+								</a>
+								<!-- typeform JS -->
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
