--- a/dokument/index.html
+++ b/dokument/index.html
@@ -65,9 +65,9 @@
 			<!-- right menu nav -->
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../#tjanster">Tjänster</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -87,15 +87,15 @@
 			<ul class="mainMenu text-blue">
 				<span class="bold small text-blueGrey">Navigation</span>
 				<li>
-					<a href="../#erbjudande">
-						<p>Vårt erbjudande</p>
+					<a href="../#tjanster">
+						<p>Tjänster</p>
 					</a>
 				</li>
 				<br>
 				<br>
 				<li>
 					<a href="../kontakt/">
-						<p>Kundkontakt</p>
+						<p>Kontakta oss</p>
 					</a>
 				</li>
 				<br>
