--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -85,9 +85,9 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../#tjanster">Tjänster</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -107,15 +107,15 @@
 		<ul class="mainMenu text-blue">
 			<span class="bold small text-blueGrey">Navigation</span>
 			<li>
-				<a href="../#erbjudande">
-					<p>Vårt erbjudande</p>
+				<a href="../#tjanster">
+					<p>Tjänster</p>
 				</a>
 			</li>
 			<br>
 			<br>
 			<li>
 				<a href="../kontakt/">
-					<p>Kundkontakt</p>
+					<p>Kontakta oss</p>
 				</a>
 			</li>
 			<br>
