--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -88,9 +88,9 @@
 			<!-- right menu nav -->
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../#tjanster">Tjänster</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
 		</div>
@@ -109,10 +109,10 @@
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 				<span class="bold small text-blueGrey">Navigation</span>
-				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
+				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
-				<li><a href="../kontakt/"><p>Kundkontakt</p></a></li>
+				<li><a href="../kontakt/"><p>Kontakta oss</p></a></li>
 				<br>
 				<br>
 				<li><a href="../karriar/"><p>Karriär</p></a></li>
