I've now added new copy to each service page and you can now only book an inspection on respective service page instead of the landing page

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -14,14 +14,14 @@
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta property="og:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
+	<meta property="og:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/entreprenad" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
+	<meta name="twitter:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
+	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -622,36 +622,15 @@
 				<br>
 				<br>
 				<div class="fix-10-12 left margin-bottom-3">
-					<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång?</a>
+					<h3 class="margin-0">Redo att sätta igång?</h3>
+					<br>
+					<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 					<script>
-						(function() {
-							var qs, js, q, s, d = document,
-								gi = d.getElementById,
-								ce = d.createElement,
-								gt = d.getElementsByTagName,
-								id = 'typef_orm_share',
-								b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-							if (!gi.call(d, id)) {
-								js = ce.call(d, 'script');
-								js.id = id;
-								js.src = b + 'share.js';
-								q = gt.call(d, 'script')[0];
-								q.parentNode.insertBefore(js, q)
-							}
-							id = id + '_';
-							if (!gi.call(d, id)) {
-								qs = ce.call(d, 'link');
-								qs.rel = 'stylesheet';
-								qs.id = id;
-								qs.href = b + 'share-button.css';
-								s = gt.call(d, 'head')[0];
-								s.appendChild(qs, s)
-							}
-						})()
+						!function(){var e,t,a,l,s=document,r=s.getElementById,c=s.createElement,n=s.getElementsByTagName,m="typef_orm_share",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";r.call(s,m)||((t=c.call(s,"script")).id=m,t.src=o+"share.js",(a=n.call(s,"script")[0]).parentNode.insertBefore(t,a)),m+="_",r.call(s,m)||((e=c.call(s,"link")).rel="stylesheet",e.id=m,e.href=o+"share-button.css",(l=n.call(s,"head")[0]).appendChild(e,l))}();
 					</script>
-				</div>
-				<div class="fix-10-12">
-					<a href="tel:0101654000" class="bold text-blue margin-left-3">Alternativt ring oss på: 010-165 40 00</a>
+					<br>
+					<br>
+					<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
 				</div>
 			</div>
 		</div>
