--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -446,37 +446,17 @@
 							<br> • Gårdshus-återvinning-källsortering
 						</p>
 					</div>
-					<div class="fix-10-12 left margin-bottom-5">
-						<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång?</a>
+					<div class="fix-10-12 left margin-bottom-3">
+						<h3 class="margin-0">Redo att sätta igång?</h3>
+						<p class="micro margin-0">Enklaste sättet är att fylla i vårt kontaktformulär så hör vi av oss.</p>
+						<br>
+						<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Fyll i kontaktformuläret</a>
 						<script>
-							(function() {
-								var qs, js, q, s, d = document,
-									gi = d.getElementById,
-									ce = d.createElement,
-									gt = d.getElementsByTagName,
-									id = 'typef_orm_share',
-									b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-								if (!gi.call(d, id)) {
-									js = ce.call(d, 'script');
-									js.id = id;
-									js.src = b + 'share.js';
-									q = gt.call(d, 'script')[0];
-									q.parentNode.insertBefore(js, q)
-								}
-								id = id + '_';
-								if (!gi.call(d, id)) {
-									qs = ce.call(d, 'link');
-									qs.rel = 'stylesheet';
-									qs.id = id;
-									qs.href = b + 'share-button.css';
-									s = gt.call(d, 'head')[0];
-									s.appendChild(qs, s)
-								}
-							})()
+							!function(){var e,t,a,l,s=document,r=s.getElementById,c=s.createElement,n=s.getElementsByTagName,m="typef_orm_share",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";r.call(s,m)||((t=c.call(s,"script")).id=m,t.src=o+"share.js",(a=n.call(s,"script")[0]).parentNode.insertBefore(t,a)),m+="_",r.call(s,m)||((e=c.call(s,"link")).rel="stylesheet",e.id=m,e.href=o+"share-button.css",(l=n.call(s,"head")[0]).appendChild(e,l))}();
 						</script>
-					</div>
-					<div class="fix-10-12">
-						<a href="tel:0101654000" class="bold text-blue margin-left-3">Alternativt ring oss på: 010-165 40 00</a>
+						<br>
+						<br>
+						<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
 					</div>
 				</div>
 			</div>
