--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
 								<a href="tjanster/entreprenad/">
-									<p class="common-Link">Våra tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<!-- typeform button -->
@@ -381,7 +381,7 @@
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<a href="tjanster/brf/">
-									<p class="common-Link">Våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<!-- typeform button -->
@@ -423,7 +423,7 @@
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<a href="tjanster/privat/">
-									<p class="common-Link">Våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<!-- typeform button -->
