Removed old classes from the footer

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -640,7 +640,7 @@
 						<img src="../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
 						<p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<ul class="later center">
-							<li class="col-6-12 ae-3">
+							<li class="col-6-12">
 								<h3 class="margin-bottom-1">Kontor</h3>
 								<a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
 									<p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p>
@@ -649,7 +649,7 @@
 									<p class="text-blue bold">Telefon: 010-165 40 00</p>
 								</a>
 							</li>
-							<li class="col-6-12 ae-5">
+							<li class="col-6-12">
 								<h3 class="margin-bottom-1">Följ oss</h3>
 								<a target="_blank" href="https://medium.com/besiktningsbloggen">
 									<p class="text-blue bold">Besiktningsbloggen</p>
