--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -197,7 +197,7 @@
 					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
           <p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
-            <li class="col-6-12 ae-3">
+            <li class="col-6-12">
               <h3 class="margin-bottom-1">Kontor</h3>
               <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
 								<p class="text-blue bold">
@@ -206,7 +206,7 @@
 							</a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
-            <li class="col-6-12 ae-5">
+            <li class="col-6-12">
               <h3 class="margin-bottom-1">Följ oss</h3>
 							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
