--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -169,6 +169,9 @@
 								Besiktningsbloggen
 							</h3>
 							<div class="margin-left-2">
+								<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Dags att sluta subventionera byggfel!</p>
+								</a>
 								<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20">
 									<p class="micro bold text-blue" style="margin-top: 15px;">Ställ Skall-krav även på beställaren!</p>
 								</a>
