Added a second image to the footer, CTA to read the blog

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue bold micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue bold micro">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<div class="col-6-12 left fromRight">
@@ -353,7 +353,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -395,7 +395,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -437,7 +437,7 @@
 								<br>
 								<br>
 								<a href="tel:0101654000">
-									<p class="text-blue micro">Kan även ringa oss på: 010-165 40 00</p>
+									<p class="text-blue micro">Ni kan även ringa oss på: 010-165 40 00</p>
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -482,13 +482,13 @@
 
 	<!-- BIG CTAS-->
 	<section class="slide whiteSlide" id="newsletter-slide" style="background-color: #fbfbfb;">
-		<div class="padding-5">
-			<p class="center small text-blueGrey">Läs vårt nyhetsbrev!</p>
-			<div class="center-m-down center">
+		<div class="padding-5 center">
+				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
+					<img src="assets/img/nyheter/bmblogg.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
+				</a>
 				<a data-popup-id="letters" class="popupTrigger common-Link globalFooterCard soft-shadow white">
-							<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
-						</a>
-			</div>
+					<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
+				</a>
 		</div>
 	</section>
 
