created a subpage for the ISPECT detail page

--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
 										</li>
 									</ul>
 									<p class="margin-bottom-2 common-Link">
-										Mer om digitaliserad entreprenadbesiktning
+										<a href="/helhetskoncept/">
+											Mer om digitaliserad entreprenadbesiktning
+											<i class="icono-arrow2-left"></i>
+										</a>
 									</p>
 								</a>
 								<!-- typeform button -->
