swapping out titles in Doc page

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -145,7 +145,7 @@
 			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<img src="../assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="margin-bottom-1" style="height: 100%;">
+						<h1>Dokument</h1>
 						<p>
 							Nedan kan du läsa viktiga dokument och artiklar gällande besiktningar.
 						</p>
@@ -163,7 +163,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12 left">
-						<h1>Utbildningsmaterial</h1>
+						<h2>Utbildningsmaterial</h2>
 						<p>
 							Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till.
 							<br>
@@ -171,7 +171,7 @@
 							<br>
 							På detta vis kan du undvika extra kostnader men även förstå vad som pågår när du renoverar eller bygger till.
 						</p>
-						<h2>Besiktningar för bostadsrättsföreningar</h2>
+						<h3>Besiktningar för bostadsrättsföreningar</h3>
 						<ul class="grid grid-74 later equal left margin-top-5">
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="box-74">
@@ -217,7 +217,7 @@
 							</li>
 						</ul>
 						<br>
-						<h2>Formulär & böcker</h2>
+						<h3>Formulär & böcker</h3>
 						<ul class="grid grid-74 later equal left margin-top-5">
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="box-74">
@@ -263,7 +263,7 @@
 							</li>
 						</ul>
 						<br>
-						<h2>Allmänt</h2>
+						<h3>Allmänt</h3>
 						<ul class="left">
 							<li>
 								<a href="http://sbr.se/" target="_blank" class="text-blue bold small">Svensk byggtjänst - Effektivare byggprocess</a>
