Added link to the Helhetskoncept-subpage

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -190,7 +190,7 @@
 								Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
 								har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
 							</p>
-							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
+							<a class="text-blue bold fromLeft popupTrigger" href="../helhetskoncept/"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
 					</div>
 
 				</div>
