Adding logos to the doc list of companies

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -284,6 +284,80 @@
 							</li>
 						</ul>
 						<br>
+						<h3>Regler och Toleranser</h3>
+						<ul class="grid grid-74 later equal left">
+							<!-- info card 1 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://foreningenbkk.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/bkk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Byggandets kontraktskommitté</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 2 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://bkr.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/bkr_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Byggkeramikrådet</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 3 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://gvk.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/gvk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Golvbranschens Våtrumskontroll</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 4 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.vatrumsmalning.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/mvk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Måleribranschens Våtrumskontroll</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 5 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.maleriforetagen.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/maleriforetagen_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Måleriföretagen</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+						</ul>
+						<br>
 						<h3>Allmänt</h3>
 						<ul class="left">
 							<li>
