--- a/dokument/index.html
+++ b/dokument/index.html
@@ -183,7 +183,7 @@
 			<div class="container container-lg">
 				<div class="wrap">
 
-					<div class="fix-10-12 left">
+					<div class="fix-10-10 left">
 						<h2>Utbildningsmaterial</h2>
 						<p>
 							Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till.
@@ -290,7 +290,7 @@
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
 	              <a href="http://foreningenbkk.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/bkk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                  <img src="../assets/img/logos/dokument/bkk_logo.png" class="center center-m-down" alt="Byggandets kontraktskommitté"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
@@ -304,7 +304,7 @@
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
 	              <a href="http://bkr.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/bkr_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                  <img src="../assets/img/logos/dokument/bkr_logo.png" class="center center-m-down" alt="Byggkeramikrådet"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
@@ -318,7 +318,7 @@
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
 	              <a href="http://gvk.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/gvk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                  <img src="../assets/img/logos/dokument/gvk_logo.png" class="center center-m-down" alt="Golvbranschens Våtrumskontroll"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
@@ -332,7 +332,7 @@
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
 	              <a href="https://www.vatrumsmalning.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/mvk_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                  <img src="../assets/img/logos/dokument/mvk_logo.png" class="center center-m-down" alt="Måleribranschens Våtrumskontroll"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
@@ -346,7 +346,7 @@
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
 	              <a href="https://www.maleriforetagen.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/maleriforetagen_logo.png" class="center center-m-down" alt="Thumbnail"/>
+	                  <img src="../assets/img/logos/dokument/maleriforetagen_logo.png" class="center center-m-down" alt="Måleriföretagen"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
@@ -356,47 +356,169 @@
 	                </div>
 	              </a>
 	            </li>
+							<!-- info card 6 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.byggtjanst.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/svenskbyggtjanst_logo.png" class="center center-m-down" alt="Svensk Byggtjänst"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Svensk Byggtjänst</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 7 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.sakervatten.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/sakervatten_logo.png" class="center center-m-down" alt="Svensk Byggtjänst"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Säker Vatten AB</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+
 						</ul>
 						<br>
-						<h3>Allmänt</h3>
-						<ul class="left">
-							<li>
-								<a href="http://sbr.se/" target="_blank" class="text-blue bold small">Svensk byggtjänst - Effektivare byggprocess</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://bkr.se/" target="_blank" class="text-blue bold small">Byggkeramikrådet - Sveriges stora auktoritet inom kakel och klinker</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://www.gvk.se/" target="_blank" class="text-blue bold small">GVK - AB Svensk Våtrumskontroll</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://spef.org" target="_blank" class="text-blue bold small">SPEF - Branschföreningen för murat & putsat byggande</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://www.sakervatten.se/" target="_blank" class="text-blue bold small">Säker Vatten - Hitta auktoriserade VVS-företag</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://www.pvforetagen.se/" target="_blank" class="text-blue bold small">Plåt & Ventföretagen, bransch- och arbetsgivarorganisationen för plåtslageri, ventilation och stål- & lättbyggnad.</a>
-							</li>
-							<br>
-							<li>
-								<a href="http://stockholmsbf.se/" target="_blank" class="text-blue bold small">Stockholms Byggmästareförening Stockholms - Byggmästareförening är den lokala branschorganisationen för bygg-, anläggnings- och specialföretag i Stockholm</a>
-							</li>
-							<br>
-							<li>
-								<a href="http://www.maklarsamfundet.se/" target="_blank" class="text-blue bold small">Mäklarsamfundet - Branschorganisationen för fastighetsmäklare</a>
-							</li>
-							<br>
-							<li>
-								<a href="https://www.maleriforetagen.se/" target="_blank" class="text-blue bold small">Måleriföretagen i Sverige - Måleriföretagen är en bransch- och arbetsgivarorganisation med uppdraget att utveckla det professionella måleriet i Sverige. </a>
-							</li>
+						<h3>Försäkringsbolag</h3>
+						<ul class="grid grid-74 later equal left">
+							<!-- info card 1 -->
+	            <li class="col-3-10 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://gar-bo.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/garbo_logo.png" class="center center-m-down" alt="GAR-BO"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">GAR-BO</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 2 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://nordic.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/nordicforsakring_logo.png" class="center center-m-down" alt="Nordic Färskring och Riskhantering"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Nordic Försäkring <br> och Riskhantering</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 3 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://protectorforsakring.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/protector_logo.png" class="center center-m-down" alt="Protector Försäkring"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                    <p class="micro margin-0 text-blue center">Protector <br> Försäkring</p>
+	                </div>
+	              </a>
+	            </li>
 						</ul>
 						<br>
+						<h3>Intresseorganisationer</h3>
+						<ul class="grid grid-74 later equal left">
+							<!-- info card 1 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://boverket.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/" class="center center-m-down" alt="GAR-BO"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">x</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+
+						</ul>
+						<h3>Myndigheter</h3>
+						<ul class="grid grid-74 later equal left">
+							<!-- info card 1 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://boverket.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/boverket_logo.png" class="center center-m-down" alt="GAR-BO"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Boverket</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 2 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://elsakerhetsverket.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/elsakerhetsverket_logo.png" class="center center-m-down" alt="Elsäkerhetsverket"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Elsäkerhetsverket</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 3 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://konsumentverket.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/konsumentverket_logo.png" class="center center-m-down" alt="Konsumentverket"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                    <p class="micro margin-0 text-blue center">Konsumentverket</p>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 4 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://riksdagen.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/riksdagen_logo.png" class="center center-m-down" alt="Riksdagen"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                    <p class="micro margin-0 text-blue center">Riksdagen</p>
+	                </div>
+	              </a>
+	            </li>
+						</ul>
+						<h3>Advokatbyråer</h3>
+						<ul class="grid grid-74 later equal left">
+							<!-- info card 1 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://boverket.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/" class="center center-m-down" alt="GAR-BO"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">x</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+
+						</ul>
 
 					</div>
 
